--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,15 +1,14 @@
 <h1><%= @place.name %></h1>
 
-<h2>Posts</h2>
 
-<ul>
+
   <% for post in @place.posts %>
-    <h4> <li><%= "#{post.title}" %></li> </h4>
-    <li><%= "#{post.posted_on}" %></li>
-    <li><%= "#{post.description}" %></li>
+    <h3> <%= "#{post.title}" %></h3>
+    <h5><%= "#{post.posted_on}" %></h5>
+    <p><%= "#{post.description}" %></p>
 
   <% end %>
-</ul>
+
 
 <p>
   <a href="/posts/new?place_id=<%= @place.id %>">New Post</a>
